--- a/Level.html
+++ b/Level.html
@@ -122,8 +122,8 @@
                     <i class="bi bi-search" style="color: grey;"></i>
                     <input type="search" placeholder="Search ">
                 </div>
-                 <!------- WWHO TO FOLLOW ------->
-                 <div class="who-to-follow">
+                <!------- WWHO TO FOLLOW ------->
+                <div class="who-to-follow">
                     <h4>Who to Follow</h4>
                     <div class="follow">
                         <div class="info">
@@ -132,7 +132,7 @@
                             </div>
                             <div>
                                 <h5>@hajia</h5>
-                                <p class="text-muted">Novice Astroner</p>
+                                <p class="text-lvl">Novice Astroner</p>
                             </div>
                         </div>
                         <div class="action">
@@ -146,7 +146,7 @@
                             </div>
                             <div>
                                 <h5>@edelson</h5>
-                                <p class="text-muted">Star Explorer</p>
+                                <p class="text-lvl">Star Explorer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -160,7 +160,7 @@
                             </div>
                             <div>
                                 <h5>@megan</h5>
-                                <p class="text-muted">Galaxy Pioneer</p>
+                                <p class="text-lvl">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -178,6 +178,6 @@
             <!----------------- END OF RIGHT -------------------->
         </div>
     </main>
-    <script src = "index.js"></script>
+    <script src = "interaction.js"></script>
 </body>
 </html>
