--- a/Notifications.html
+++ b/Notifications.html
@@ -131,7 +131,7 @@
                     <input type="search" placeholder="Search ">
                 </div>
                   <!------- WWHO TO FOLLOW ------->
-                  <div class="who-to-follow">
+                <div class="who-to-follow">
                     <h4>Who to Follow</h4>
                     <div class="follow">
                         <div class="info">
@@ -140,7 +140,7 @@
                             </div>
                             <div>
                                 <h5>@hajia</h5>
-                                <p class="text-muted">Novice Astroner</p>
+                                <p class="text-lvl">Novice Astroner</p>
                             </div>
                         </div>
                         <div class="action">
@@ -154,7 +154,7 @@
                             </div>
                             <div>
                                 <h5>@edelson</h5>
-                                <p class="text-muted">Star Explorer</p>
+                                <p class="text-lvl">Star Explorer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -168,7 +168,7 @@
                             </div>
                             <div>
                                 <h5>@megan</h5>
-                                <p class="text-muted">Galaxy Pioneer</p>
+                                <p class="text-lvl">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -186,6 +186,6 @@
             <!----------------- END OF RIGHT -------------------->
         </div>
     </main>
-    <script src = "index.js"></script>
+    <script src = "interaction.js"></script>
 </body>
 </html>
