--- a/Settings.html
+++ b/Settings.html
@@ -101,6 +101,6 @@
             <!----------------- END OF RIGHT -------------------->
         </div>
     </main>
-    <script src = "index.js"></script>
+    <script src = "interaction.js"></script>
 </body>
 </html>
