--- a/Home.html
+++ b/Home.html
@@ -292,7 +292,7 @@
                             </div>
                             <div>
                                 <h5>@hajia</h5>
-                                <p class="text-muted">Novice Astroner</p>
+                                <p class="text-lvl">Novice Astroner</p>
                             </div>
                         </div>
                         <div class="action">
@@ -306,7 +306,7 @@
                             </div>
                             <div>
                                 <h5>@edelson</h5>
-                                <p class="text-muted">Star Explorer</p>
+                                <p class="text-lvl">Star Explorer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -320,7 +320,7 @@
                             </div>
                             <div>
                                 <h5>@megan</h5>
-                                <p class="text-muted">Galaxy Pioneer</p>
+                                <p class="text-lvl">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -338,6 +338,6 @@
             <!----------------- END OF RIGHT -------------------->
         </div>
     </main>
-    <script src = "index.js"></script>
+    <script src = "interaction.js"></script>
 </body>
 </html>
