--- a/Messages.html
+++ b/Messages.html
@@ -163,7 +163,7 @@
             </div>
             <div>
                 <h5>@hajia</h5>
-                <p class="text-muted">Novice Astroner</p>
+                <p class="text-lvl">Novice Astroner</p>
             </div>
         </div>
         <div class="action">
@@ -177,7 +177,7 @@
             </div>
             <div>
                 <h5>@edelson</h5>
-                <p class="text-muted">Star Explorer</p>
+                <p class="text-lvl">Star Explorer</p>
             </div>
         </div>
         <div class="action">
@@ -191,7 +191,7 @@
             </div>
             <div>
                 <h5>@megan</h5>
-                <p class="text-muted">Galaxy Pioneer</p>
+                <p class="text-lvl">Galaxy Pioneer</p>
             </div>
         </div>
         <div class="action">
@@ -209,6 +209,7 @@
 <!----------------- END OF RIGHT -------------------->
         </div>
     </main>
-    <script src = "index.js"></script>
+    <script src = "interaction.js"></script>
+    <script src="search_messages.js"></script>
 </body>
 </html>
