--- a/SuperStars.html
+++ b/SuperStars.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>mySocial - Responsive Social Media Website Using HTML, CSS, & JavaScript</title>
-        <!-- IconScout CDN -->
+        <!-- Icon CDN -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <!-- Stylesheet -->
         <link rel="stylesheet" href="./style.css">
