--- a/Accountİnformation.html
+++ b/Accountİnformation.html
@@ -18,12 +18,12 @@
             </div>
             <div class="login">
                 <h2 style="color: white;">Account Information</h2>
-                <p style="color: white; text-align: center;">Update your account information like username, email, etc.</p>
+                <p style="color: white; text-align: center;">Update your account information like username, email.</p>
                 <div class="inputBx">
-                    <input type="text" placeholder="Username" value="current_username">
+                    <input type="text" placeholder="Username">
                 </div>
                 <div class="inputBx">
-                    <input type="email" placeholder="Email" value="current_email@example.com">
+                    <input type="email" placeholder="Email">
                 </div>
                 <div class="inputBx">
                     <a href="Settings.html">
