--- a/StarFall.html
+++ b/StarFall.html
@@ -58,17 +58,17 @@
                     <label class="btn btn-primary" style="background: linear-gradient(45deg, #9b6ef3, #fe019a);" for="log out">Log Out</label>
                 </a>
                 <!----------------- PROFILE -------------------->
-                <a class="profile">
+                <a class="profile" href="Profile.html">
                     <div class="profile-photo">
-                        <img src="assets/images/profile-13.png">
+                        <img src="assets/images/profile-13.png" alt="Profile Photo">
                     </div>
                     <div class="profile-card">
                         <div class="username">@username</div>
                         <div class="text-lvl">Star Explorer</div>
                         <div class="daily-stars" style="margin-top: 0.4rem;">
-                          Daily Stars: <i class="bi bi-star-fill"></i> 29
+                            Daily Stars: <i class="bi bi-star-fill"></i> 29
                         </div>
-                      </div>
+                    </div>
                 </a>
             </div>
 
@@ -97,7 +97,7 @@
                 <ul>
                     <li><a href="#">Block User</a></li>
                     <li><a href="#">Report User</a></li>
-                    <li><a href="Profile.html">View Profile</a></li>
+                    <li><a href="ViewProfile.html">View Profile</a></li>
                 </ul>
             </div>
             <span class="edit">
@@ -146,7 +146,7 @@
                     <ul>
                         <li><a href="#">Block User</a></li>
                         <li><a href="#">Report User</a></li>
-                        <li><a href="Profile.html">View Profile</a></li>
+                        <li><a href="ViewProfile.html">View Profile</a></li>
                     </ul>
                 </div>
                 <span class="edit">
@@ -195,7 +195,7 @@
                 <ul>
                     <li><a href="#">Block User</a></li>
                     <li><a href="#">Report User</a></li>
-                    <li><a href="Profile.html">View Profile</a></li>
+                    <li><a href="ViewProfile.html">View Profile</a></li>
                 </ul>
             </div>
             <span class="edit">
@@ -244,7 +244,7 @@
                     <ul>
                         <li><a href="#">Block User</a></li>
                         <li><a href="#">Report User</a></li>
-                        <li><a href="Profile.html">View Profile</a></li>
+                        <li><a href="ViewProfile.html">View Profile</a></li>
                     </ul>
                 </div>
                 <span class="edit">
@@ -340,6 +340,6 @@
             <!----------------- END OF RIGHT -------------------->
         </div>
     </main>
-    <script src = "index.js"></script>
+    <script src = "interaction.js"></script>
 </body>
 </html>
