--- a/Home.html
+++ b/Home.html
@@ -57,17 +57,17 @@
                     <label class="btn btn-primary" style="background: linear-gradient(45deg, #9b6ef3, #fe019a);" for="log out">Log Out</label>
                     </a>
                    <!----------------- PROFILE -------------------->
-                <a class="profile">
+                   <a class="profile" href="Profile.html">
                     <div class="profile-photo">
-                        <img src="assets/images/profile-13.png">
+                        <img src="assets/images/profile-13.png" alt="Profile Photo">
                     </div>
                     <div class="profile-card">
                         <div class="username">@username</div>
                         <div class="text-lvl">Star Explorer</div>
                         <div class="daily-stars" style="margin-top: 0.4rem;">
-                          Daily Stars: <i class="bi bi-star-fill"></i> 29
+                            Daily Stars: <i class="bi bi-star-fill"></i> 29
                         </div>
-                      </div>
+                    </div>
                 </a>
             </div>
 
@@ -91,7 +91,7 @@
                 <ul>
                     <li><a href="#">Block User</a></li>
                     <li><a href="#">Report User</a></li>
-                    <li><a href="Profile.html">View Profile</a></li>
+                    <li><a href="ViewProfile.html">View Profile</a></li>
                 </ul>
             </div>
             <span class="edit">
@@ -140,7 +140,7 @@
                     <ul>
                         <li><a href="#">Block User</a></li>
                         <li><a href="#">Report User</a></li>
-                        <li><a href="Profile.html">View Profile</a></li>
+                        <li><a href="ViewProfile.html">View Profile</a></li>
                     </ul>
                 </div>
                 <span class="edit">
@@ -189,7 +189,7 @@
                 <ul>
                     <li><a href="#">Block User</a></li>
                     <li><a href="#">Report User</a></li>
-                    <li><a href="Profile.html">View Profile</a></li>
+                    <li><a href="ViewProfile.html">View Profile</a></li>
                 </ul>
             </div>
             <span class="edit">
@@ -238,7 +238,7 @@
                     <ul>
                         <li><a href="#">Block User</a></li>
                         <li><a href="#">Report User</a></li>
-                        <li><a href="Profile.html">View Profile</a></li>
+                        <li><a href="ViewProfile.html">View Profile</a></li>
                     </ul>
                 </div>
                 <span class="edit">
