--- a/SuperStars.html
+++ b/SuperStars.html
@@ -57,17 +57,17 @@
                     <label class="btn btn-primary" style="background: linear-gradient(45deg, #9b6ef3, #fe019a);" for="log out">Log Out</label>
                 </a>
               <!----------------- PROFILE -------------------->
-              <a class="profile">
+              <a class="profile" href="Profile.html">
                 <div class="profile-photo">
-                    <img src="assets/images/profile-13.png">
+                    <img src="assets/images/profile-13.png" alt="Profile Photo">
                 </div>
                 <div class="profile-card">
                     <div class="username">@username</div>
                     <div class="text-lvl">Star Explorer</div>
                     <div class="daily-stars" style="margin-top: 0.4rem;">
-                      Daily Stars: <i class="bi bi-star-fill"></i> 29
+                        Daily Stars: <i class="bi bi-star-fill"></i> 29
                     </div>
-                  </div>
+                </div>
             </a>
             </div>
 
@@ -104,7 +104,7 @@
 <!-- Başlangıçtaki kutu, profil fotoğrafını seçme -->
 <div class="modal-content" id="profile-photo-content">
     <h2>Choose profile photo</h2>
-    <button class="photo-select">
+    <button class="photo-select1">
         <img src="assets/images/user-icon.png" alt="User Icon">
     </button>
 </div>
@@ -112,15 +112,20 @@
 <!-- Sonraki adım, profil banner'ını seçme -->
 <div class="modal-content" id="profile-banner-content" style="display: none;">
     <h2>Choose profile banner</h2>
-    <button class="photo-select">
+    <button class="photo-select2">
         <img src="assets/images/banner-icon.png" alt="Banner Icon">
     </button>
 </div>
 
 <div class="modal-buttons">
-    <button class="next">Next</button>
-    <button class="skip">Skip</button>
+    <!-- Birinci adım butonları -->      
     <button class="cancel">Cancel</button>
+    <button class="skip">Skip</button>
+    <button class="next">Next</button>
+
+    <!-- İkinci adım butonları -->
+    <button class="back" style="display: none;">Back</button>
+    <button class="finish" style="display: none;">Finish</button>
 </div>
 </div>
               
@@ -141,7 +146,7 @@
                   <div class="tabs">
                     <ul>
                       <a href="Profile.html" style="color: inherit; text-decoration: none;">Posts</a>
-                      <li class="selected chosen">Super Star</li>
+                      <li class="selected chosen">Super Stars</li>
                     </ul>
                   </div>                                
               
@@ -164,7 +169,7 @@
                 <ul>
                     <li><a href="#">Block User</a></li>
                     <li><a href="#">Report User</a></li>
-                    <li><a href="Profile.html">View Profile</a></li>
+                    <li><a href="ViewProfile.html">View Profile</a></li>
                 </ul>
             </div>
             <span class="edit">
@@ -213,7 +218,7 @@
                     <ul>
                         <li><a href="#">Block User</a></li>
                         <li><a href="#">Report User</a></li>
-                        <li><a href="Profile.html">View Profile</a></li>
+                        <li><a href="ViewProfile.html">View Profile</a></li>
                     </ul>
                 </div>
                 <span class="edit">
@@ -262,7 +267,7 @@
                 <ul>
                     <li><a href="#">Block User</a></li>
                     <li><a href="#">Report User</a></li>
-                    <li><a href="Profile.html">View Profile</a></li>
+                    <li><a href="ViewProfile.html">View Profile</a></li>
                 </ul>
             </div>
             <span class="edit">
@@ -311,7 +316,7 @@
                     <ul>
                         <li><a href="#">Block User</a></li>
                         <li><a href="#">Report User</a></li>
-                        <li><a href="Profile.html">View Profile</a></li>
+                        <li><a href="ViewProfile.html">View Profile</a></li>
                     </ul>
                 </div>
                 <span class="edit">
