--- a/Messages.html
+++ b/Messages.html
@@ -57,7 +57,7 @@
                     <label class="btn btn-primary" style="background: linear-gradient(45deg, #9b6ef3, #fe019a);" for="log out">Log Out</label>
                 </a>
              <!----------------- PROFILE -------------------->
-             <a class="profile">
+             <a class="profile" href="Profile.html">
                 <div class="profile-photo">
                     <img src="assets/images/profile-13.png">
                 </div>
