--- a/Home.html
+++ b/Home.html
@@ -125,6 +125,7 @@
     </div>
     <!-- END OF FEED 1 -->
         <!-- FEED 2 -->
+        <div class="feeds">
         <div class="feed">
             <div class="head">
                 <div class="user">
@@ -172,6 +173,7 @@
                 View all 277 comments
             </div>
         </div>
+    </div>
     <!-- END OF FEED 2 -->
         <!-- FEED 3 -->
     <div class="feed">
