--- a/Settings.html
+++ b/Settings.html
@@ -58,17 +58,19 @@
                 </a>
                 <!----------------- PROFILE -------------------->
                 <a class="profile" href="Profile.html">
-                    <div class="profile-photo">
-                        <img src="assets/images/profile-13.png" alt="Profile Photo">
+                <div class="profile-photo">
+                    <img src="assets/images/profile-13.png" alt="Profile Photo">
+                </div>
+                <div class="profile-card">
+                    <div class="username">@username</div>
+                    <div class="text-lvl">Star Explorer</div>
+                    <div class="daily-stars" style="margin-top: 0.4rem;">
+                        Daily Stars: <i class="bi bi-star-fill"></i> 
+                        <span id="stars-count">15</span>
                     </div>
-                    <div class="profile-card">
-                        <div class="username">@username</div>
-                        <div class="text-lvl">Star Explorer</div>
-                        <div class="daily-stars" style="margin-top: 0.4rem;">
-                            Daily Stars: <i class="bi bi-star-fill"></i> 29
-                        </div>
-                    </div>
+                </div>
                 </a>
+                 <!----------------- END PROFILE -------------------->
             </div>
 
             <!----------------- MIDDLE -------------------->
