--- a/Home.html
+++ b/Home.html
@@ -57,74 +57,92 @@
                     <label class="btn btn-primary" style="background: linear-gradient(45deg, #9b6ef3, #fe019a);" for="log out">Log Out</label>
                     </a>
                    <!----------------- PROFILE -------------------->
-                   <a class="profile" href="Profile.html">
+                <a class="profile" href="Profile.html">
+                <div class="profile-photo">
+                    <img src="assets/images/profile-13.png" alt="Profile Photo">
+                </div>
+                <div class="profile-card">
+                    <div class="username">@username</div>
+                    <div class="text-lvl">Star Explorer</div>
+                    <div class="daily-stars" style="margin-top: 0.4rem;">
+                        Daily Stars: <i class="bi bi-star-fill"></i> 
+                        <span id="stars-count">15</span>
+                    </div>
+                </div>
+                </a>
+                 <!----------------- END PROFILE -------------------->
+            </div>
+            <!----------------- MIDDLE -------------------->
+            <div class="middle">
+                <div class="error-message" id="error-message" style="color: red; margin-top: 10px; display: none;"></div>
+                <!----------------- CREATE POST   -------------------->
+                <form action="" class="create-post" id="create-post-form">
                     <div class="profile-photo">
                         <img src="assets/images/profile-13.png" alt="Profile Photo">
                     </div>
-                    <div class="profile-card">
-                        <div class="username">@username</div>
-                        <div class="text-lvl">Star Explorer</div>
-                        <div class="daily-stars" style="margin-top: 0.4rem;">
-                            Daily Stars: <i class="bi bi-star-fill"></i> 29
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <!----------------- MIDDLE -------------------->
-            <div class="middle">
+                    <input type="text" placeholder="What's happening?" id="create-post-text">
+                    <!-- Resim seçmek için gizli input -->
+                    <input type="file" id="post-image" accept="image/*" style="display: none;">
+                    <button type="button" class="gallery-button" id="gallery-button">
+                        <i class="bi bi-image"></i>
+                    </button>
+                    <input type="submit" value="Post" class="btn btn-primary" id="post-button">
+                </form>
+                             
+                <!----------------- CREATE POST   -------------------->
                 <!----------------- FEEDS -------------------->
 <div class="feeds">
     <!-- FEED 1 -->
     <div class="feed">
         <div class="head">
-            <div class="user">
-                <div class="profile-photo">
-                    <img src="assets/images/profile-13.png">
-                </div>
-                <div class="info">
-                    <h3>@user1</h3>
-                </div>
+          <div class="user">
+            <div class="profile-photo">
+              <img src="assets/images/profile-13.png">
             </div>
-            <!-- Popup Kutusu -->
-            <div class="popup">
-                <ul>
-                    <li><a href="#">Block User</a></li>
-                    <li><a href="#">Report User</a></li>
-                    <li><a href="ViewProfile.html">View Profile</a></li>
-                </ul>
+            <div class="info">
+              <h3>@user1</h3>
             </div>
-            <span class="edit">
-                <i class="bi bi-three-dots"></i>
-            </span>
+          </div>
+          <!-- Popup Kutusu -->
+          <div class="popup">
+            <ul>
+              <li><a href="#">Block User</a></li>
+              <li><a href="#">Report User</a></li>
+              <li><a href="ViewProfile.html">View Profile</a></li>
+            </ul>
+          </div>
+          <span class="edit">
+            <i class="bi bi-three-dots"></i>
+          </span>
         </div>
         <div class="photo">
-            <img src="assets/images/feed.png">
+          <img src="assets/images/feed.png">
         </div>
         <div class="action-buttons">
-            <div class="interaction-buttons">
-                <span class="star-button" onclick="handleStar(this)"><i class="bi bi-star"></i><span class="star-count"> 0</span></span>
-                <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
-                <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
-            </div>
-        </div>        
+          <div class="interaction-buttons">
+            <span class="star-button" onclick="handleStar(this)"><i class="bi bi-star"></i><span class="star-count"> 0</span></span>
+            <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
+            <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
+          </div>
+        </div>
         <div class="stared-by">
-            <span><img src="assets/images/profile-13.png"></span>
-            <span><img src="assets/images/profile-13.png"></span>
-            <span><img src="assets/images/profile-13.png"></span>
-            <p>Stared by <b>@Ernest</b> and <b>2, 323 others</b></p>
+          <span><img src="assets/images/profile-13.png"></span>
+          <span><img src="assets/images/profile-13.png"></span>
+          <span><img src="assets/images/profile-13.png"></span>
+          <p>Stared by <b>@Ernest</b> and <b>2,323 others</b></p>
         </div>
         <div class="caption">
-            <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius. 
-                <span class="harsh-tag">#lifestyle</span>
-            </p>
+          <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius.
+            <span class="harsh-tag">#lifestyle</span>
+          </p>
         </div>
         <div class="comments text-muted">
-            View all 277 comments
+          View all 277 comments
         </div>
-    </div>
+      </div>
     <!-- END OF FEED 1 -->
         <!-- FEED 2 -->
+        <div class="feeds">
         <div class="feed">
             <div class="head">
                 <div class="user">
@@ -172,6 +190,7 @@
                 View all 277 comments
             </div>
         </div>
+    </div>
     <!-- END OF FEED 2 -->
         <!-- FEED 3 -->
     <div class="feed">
@@ -339,5 +358,6 @@
         </div>
     </main>
     <script src = "interaction.js"></script>
+    <script src="create-post.js"></script>
 </body>
 </html>
