--- a/Home.html
+++ b/Home.html
@@ -86,9 +86,10 @@
                     <button type="button" class="gallery-button" id="gallery-button">
                         <i class="bi bi-image"></i>
                     </button>
+                    <!-- Resim önizleme alanı -->
+                    <div id="image-preview" class="image-preview-container"></div>
                     <input type="submit" value="Post" class="btn btn-primary" id="post-button">
-                </form>
-                             
+                </form>       
                 <!----------------- CREATE POST   -------------------->
                 <!----------------- FEEDS -------------------->
 <div class="feeds">
